# CodeTutorAI

./: .env.example  README.md  pyproject.toml
app/: config.py  main.py
app/models/: __init__.py  prompts.py
app/routes/: pages.py  questions.py
app/services/: __init__.py  llm.py  prompts.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: base.html
app/templates/pages/: home.html  questions.html
app/templates/partials/: demo.html  evaluate_error.html  evaluate_result.html  question_error.html  question_result.html
tests/: test_evaluate.py  test_prompts.py  test_questions.py
